[gd_scene load_steps=42 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://scripts/Colour_manager.gd" type="Script" id=2]
[ext_resource path="res://scripts/Ufo_container.gd" type="Script" id=3]
[ext_resource path="res://scripts/Fuel_container.gd" type="Script" id=4]
[ext_resource path="res://scripts/Landscape_manager.gd" type="Script" id=5]
[ext_resource path="res://scripts/World.gd" type="Script" id=6]
[ext_resource path="res://scripts/Rocket_container.gd" type="Script" id=7]
[ext_resource path="res://scenes/Highscore_board.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Fireball_container.gd" type="Script" id=9]
[ext_resource path="res://scripts/Tilemap.gd" type="Script" id=10]
[ext_resource path="res://TileMap.tres" type="TileSet" id=11]
[ext_resource path="res://scripts/Base_container.gd" type="Script" id=12]
[ext_resource path="res://scripts/Containers.gd" type="Script" id=13]
[ext_resource path="res://scripts/Congrations_screen.gd" type="Script" id=14]
[ext_resource path="res://PressStart2P-vaV7.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://scripts/Flag_holder.gd" type="Script" id=16]
[ext_resource path="res://shaders/Rocket.shader" type="Shader" id=17]
[ext_resource path="res://scripts/Start_screen.gd" type="Script" id=18]
[ext_resource path="res://scenes/Score_board.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/Stage_board.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/Fuel_bar.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/Input_controller.gd" type="Script" id=22]
[ext_resource path="res://shaders/Fuel_dump.shader" type="Shader" id=23]
[ext_resource path="res://shaders/Mystery.shader" type="Shader" id=24]
[ext_resource path="res://shaders/Shader_colour_swap.shader" type="Shader" id=25]
[ext_resource path="res://scenes/Pause.gd" type="Script" id=26]
[ext_resource path="res://scripts/Mystery_container.gd" type="Script" id=27]
[ext_resource path="res://scripts/Bullet_container.gd" type="Script" id=28]
[ext_resource path="res://scripts/Explosion_container.gd" type="Script" id=29]
[ext_resource path="res://shaders/Ground_target_explosion.shader" type="Shader" id=31]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 24 )
shader_param/left = Color( 1, 0, 0, 1 )
shader_param/right = Color( 0, 1, 0, 1 )
shader_param/middle = Color( 0, 0, 1, 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 23 )
shader_param/tank = null
shader_param/ul_chars = null
shader_param/stand = null

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 24 )
shader_param/left = null
shader_param/right = null
shader_param/middle = null

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 17 )
shader_param/outline = null
shader_param/fill = null
shader_param/thrust = null

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 31 )
shader_param/edges = Color( 0, 1, 0, 1 )
shader_param/fill = Color( 0, 0, 0, 1 )
shader_param/glow = null

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 24 )
shader_param/left = null
shader_param/right = null
shader_param/middle = null

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 25 )
shader_param/outline = Color( 0.76, 0.76, 0.85, 1 )
shader_param/fill = Color( 0.87, 0, 0.85, 1 )
shader_param/outline_brick = Color( 1, 1, 1, 1 )
shader_param/fill_brick = Color( 1, 0, 0, 1 )
shader_param/fill_brick_block = Color( 0.75, 0.75, 0.75, 1 )
shader_param/outline_brick_block = Color( 1, 0, 1, 1 )

[sub_resource type="DynamicFont" id=8]
size = 8
outline_color = Color( 1, 1, 0, 1 )
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=9]
size = 8
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=10]
size = 8
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=11]
size = 8
font_data = ExtResource( 15 )

[node name="World" type="Node2D"]
material = SubResource( 1 )
position = Vector2( 1, 0 )
script = ExtResource( 6 )

[node name="Input_manager" type="Node" parent="."]
script = ExtResource( 22 )

[node name="Containers" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Fuel_container" type="Node2D" parent="Containers"]
material = SubResource( 2 )
script = ExtResource( 4 )

[node name="Fireball_container" type="Node2D" parent="Containers"]
script = ExtResource( 9 )

[node name="Mystery_container" type="Node2D" parent="Containers"]
material = SubResource( 3 )
script = ExtResource( 27 )

[node name="Rocket_container" type="Node2D" parent="Containers"]
material = SubResource( 4 )
script = ExtResource( 7 )

[node name="Ufo_container" type="Node2D" parent="Containers"]
script = ExtResource( 3 )

[node name="Explosion_container" type="Node2D" parent="Containers"]
material = SubResource( 5 )
script = ExtResource( 29 )
__meta__ = {
"_editor_description_": "Factory for creating enemy explosions"
}

[node name="Base_container" type="Node2D" parent="Containers"]
material = SubResource( 6 )
script = ExtResource( 12 )

[node name="Landscape_manager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Colour_manager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Tilemap" type="TileMap" parent="."]
material = SubResource( 7 )
tile_set = ExtResource( 11 )
cell_size = Vector2( 8, 8 )
collision_layer = 8
collision_mask = 2
format = 1
script = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="Tilemap"]
anchor_mode = 0
current = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Lower_hud" type="Node2D" parent="HUD"]

[node name="Lives" type="Node2D" parent="HUD/Lower_hud"]

[node name="Fuel_bar" parent="HUD/Lower_hud" instance=ExtResource( 21 )]
position = Vector2( 63.263, 239.733 )

[node name="label_text_fuel" type="Label" parent="HUD/Lower_hud/Fuel_bar"]
margin_left = -34.47
margin_top = 0.266998
margin_right = 5.53
margin_bottom = 8.267
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "FUEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flag_holder" type="Node2D" parent="HUD/Lower_hud"]
script = ExtResource( 16 )

[node name="Stage_board" parent="HUD" instance=ExtResource( 20 )]
position = Vector2( 16, 24 )

[node name="Score_board" parent="HUD" instance=ExtResource( 19 )]
position = Vector2( 16, 1 )

[node name="Player_one_label" type="Label" parent="HUD"]
visible = false
margin_left = 72.0
margin_top = 169.0
margin_right = 152.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 9 )
text = "PLAYER ONE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_over_label" type="Label" parent="HUD"]
visible = false
margin_left = 72.0
margin_top = 185.0
margin_right = 152.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 10 )
text = "GAME  OVER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscore_board" parent="HUD" instance=ExtResource( 8 )]
visible = false
position = Vector2( 0, 20 )

[node name="Congrations_screen" type="Node2D" parent="HUD"]
visible = false
script = ExtResource( 14 )

[node name="Congratulations_label" type="Label" parent="HUD/Congrations_screen"]
margin_left = 51.2588
margin_top = 102.145
margin_right = 171.259
margin_bottom = 116.145
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.878431, 0.239216, 0, 1 )
text = "CONGRATULATIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Completed_duties_label" type="Label" parent="HUD/Congrations_screen"]
margin_left = 12.6707
margin_top = 118.721
margin_right = 212.671
margin_bottom = 132.721
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0, 1 )
text = "YOU COMPLETED YOUR DUTIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Good_luck_label" type="Label" parent="HUD/Congrations_screen"]
margin_left = 12.6707
margin_top = 134.721
margin_right = 212.671
margin_bottom = 148.721
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0.764706, 0.85098, 1 )
text = "GOOD LUCK NEXT TIME AGAIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_screen" type="Node2D" parent="HUD"]
script = ExtResource( 18 )

[node name="Bonus_jet_label" type="Label" parent="HUD/Start_screen"]
margin_left = 25.3965
margin_top = 201.672
margin_right = 209.396
margin_bottom = 209.672
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.878431, 0.239216, 0, 1 )
text = "BONUS JET FOR 10000 PTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_one_label" type="Label" parent="HUD/Start_screen"]
margin_left = 72.0
margin_top = 169.0
margin_right = 152.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 9 )
text = "PLAYER ONE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet_container" type="Node" parent="."]
script = ExtResource( 28 )

[node name="Bombs" type="Node" parent="."]

[node name="Pause" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 26 )
